--- a/index.html
+++ b/index.html
@@ -6,6 +6,121 @@
         <title>JS Features</title>
     </head>
     <body>
-        
+        <div>
+            <!--Lists-->
+            <ul>
+                <li>Item A</li>
+                <li>Item B</li>
+                <li>Item C</li>
+                <li>Item D</li>
+            </ul>
+        </div>
+        <div>
+            <ol>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+                <li>Item 4</li>
+            </ol>
+        </div>
+        <div>
+            <!--Forms-->
+            <a href="https://www.theodinproject.com/lessons/node-path-intermediate-html-and-css-form-basics">Form Basics, The Odin Project</a>
+            <form action="example.com/path" method="post">
+                <div>
+                    <label for="first_name">First Name:</label>
+                    <input type="text" id="first_name" name="first_name" placeholder="Yop">
+                </div>
+                <div>
+                    <label for="'last_name">Last Name:</label>
+                    <input type="text" id="last_name" name="last_name"/> 
+                </div>
+                <div>
+                    <label for="age">Age:</label>
+                    <input type="number" id="age" name="age"/> 
+                </div>
+                <div>
+                    <label for="user_email">Email Address:</label>
+                    <input type="email" id="user_email" name="email" placeholder="you@example.com">
+                </div>
+                <div>
+                    <label for="user_password">Password:</label>
+                    <input type="password" id="user_password" name="password">
+                </div>
+                <div>
+                    <label for="amount">Amount:</label>
+                    <input type="number" id="amount" name="amount">
+                </div>
+                <div>
+                    <label for="amount">Amount:</label>
+                    <input type="number" id="amount" name="amount">
+                </div>
+                <div>
+                    <label for="dob">Date of Birth:</label>
+                    <input type="date" id="dob" name="dob">
+                </div>
+                <div>
+                    <textarea rows="20" cols="60">Lorem ipsum</textarea>
+                </div>
+                <div>
+                    <select name="Car">
+                        <option value="subaru">Subaru</option>
+                        <option value="kia">Kia</option>
+                        <option value="ford">Ford</option>
+                    </select>
+                </div>
+                <div>
+                    <h1>Ticket Type</h1>
+                    <div>
+                        <input type="radio" id="child" name="ticket_type" value="child">
+                        <label for="child">Child</label>
+                        </div>
+
+                        <div>
+                        <input type="radio" id="adult" name="ticket_type" value="adult">
+                        <label for="adult">Adult</label>
+                        </div>
+
+                        <div>
+                        <input type="radio" id="senior" name="ticket_type" value="senior">
+                        <label for="senior">Senior</label>
+                    </div>
+                </div>
+                <div>
+                    <h1>Pizza Toppings</h1>
+
+                    <div>
+                    <input type="checkbox" id="sausage" name="topping" value="sausage">
+                    <label for="sausage">Sausage</label>
+                    </div>
+
+                    <div>
+                    <input type="checkbox" id="onions" name="topping" value="onions">
+                    <label for="onions">Onions</label>
+                    </div>
+
+                    <div>
+                    <input type="checkbox" id="pepperoni" name="topping" value="pepperoni">
+                    <label for="pepperoni">Pepperoni</label>
+                    </div>
+
+                    <div>
+                    <input type="checkbox" id="mushrooms" name="topping" value="mushrooms">
+                    <label for="mushrooms">Mushrooms</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="newsletter" name="news_letter">
+                    <label for="newsletter">Send me the news letter</label>
+                </div>
+                </div>
+                <button type="submit">Submit</button>
+                <button type="reset">Reset</button>
+
+            </form>
+            
+        </div>
+        <div>
+            <!--Image-->
+        </div>
     </body>
 </html>
