--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
                     <input type="date" id="dob" name="dob">
                 </div>
                 <div>
-                    <textarea rows="20" cols="60">Lorem ipsum</textarea>
+                    <textarea 
+                    rows="20" cols="60" 
+                    placeholder="What's happening?" 
+                    minlength="3"
+                    maxlength="20">Lorem ipsum</textarea>
                 </div>
                 <div>
                     <select name="Car">
@@ -118,6 +122,35 @@
 
             </form>
             
+        </div>
+        <div>
+            <a href="https://www.theodinproject.com/lessons/node-path-intermediate-html-and-css-form-validation">Form Validation</a>
+
+            <form action="#" method="get">
+                <div>
+                  <label for="user_email">*Email:</label>
+                  <input type="email" id="user_email" name="user_email" required>
+                </div>
+                <br>
+              
+                <div>
+                  <label for="user_password">*Password:</label>
+                  <input type="password" id="user_password" name="user_password" required>
+                </div>
+                <div>
+                    <label for="quantity">Quantity</label>
+                    <input type="number" id="quantity" name="quantity" min="1" value="0">
+                </div>
+                <div>
+                    <label for="passengers">Passengers</label>
+                    <input type="number" id="passengers" name="passengers" max="5" value="0">
+                </div>
+                <div>
+                    <label for="zip_code">Postal / Zip Code:</label>
+                    <input type="text" id="zip_code" name="zip_code" pattern="(\d{5}([\-]\d{4})?)" required>
+                </div>
+                <button type="submit">Login</button>
+              </form>
         </div>
         <div>
             <!--Image-->
