--- a/index.html
+++ b/index.html
@@ -4,156 +4,33 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width"/>
         <title>JS Features</title>
+        <link rel="stylesheet" href="style/style.css" />
     </head>
     <body>
-        <div>
-            <!--Lists-->
+        <header>
+            <h1>Hello</h1>
+            <img src="images/" alt="Logo"/>
+        </header>
+        <nav id="mainNav">
             <ul>
-                <li>Item A</li>
-                <li>Item B</li>
-                <li>Item C</li>
-                <li>Item D</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
-        </div>
-        <div>
-            <ol>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-                <li>Item 4</li>
-            </ol>
-        </div>
-        <div>
-            <!--Forms-->
-            <a href="https://www.theodinproject.com/lessons/node-path-intermediate-html-and-css-form-basics">Form Basics, The Odin Project</a>
-            <form action="example.com/path" method="post">
-                <div>
-                    <label for="first_name">First Name:</label>
-                    <input type="text" id="first_name" name="first_name" placeholder="Yop">
-                </div>
-                <div>
-                    <label for="'last_name">Last Name:</label>
-                    <input type="text" id="last_name" name="last_name"/> 
-                </div>
-                <div>
-                    <label for="age">Age:</label>
-                    <input type="number" id="age" name="age"/> 
-                </div>
-                <div>
-                    <label for="user_email">Email Address:</label>
-                    <input type="email" id="user_email" name="email" placeholder="you@example.com">
-                </div>
-                <div>
-                    <label for="user_password">Password:</label>
-                    <input type="password" id="user_password" name="password">
-                </div>
-                <div>
-                    <label for="amount">Amount:</label>
-                    <input type="number" id="amount" name="amount">
-                </div>
-                <div>
-                    <label for="amount">Amount:</label>
-                    <input type="number" id="amount" name="amount">
-                </div>
-                <div>
-                    <label for="dob">Date of Birth:</label>
-                    <input type="date" id="dob" name="dob">
-                </div>
-                <div>
-                    <textarea 
-                    rows="20" cols="60" 
-                    placeholder="What's happening?" 
-                    minlength="3"
-                    maxlength="20">Lorem ipsum</textarea>
-                </div>
-                <div>
-                    <select name="Car">
-                        <option value="subaru">Subaru</option>
-                        <option value="kia">Kia</option>
-                        <option value="ford">Ford</option>
-                    </select>
-                </div>
-                <div>
-                    <h1>Ticket Type</h1>
-                    <div>
-                        <input type="radio" id="child" name="ticket_type" value="child">
-                        <label for="child">Child</label>
-                        </div>
-
-                        <div>
-                        <input type="radio" id="adult" name="ticket_type" value="adult">
-                        <label for="adult">Adult</label>
-                        </div>
-
-                        <div>
-                        <input type="radio" id="senior" name="ticket_type" value="senior">
-                        <label for="senior">Senior</label>
-                    </div>
-                </div>
-                <div>
-                    <h1>Pizza Toppings</h1>
-
-                    <div>
-                    <input type="checkbox" id="sausage" name="topping" value="sausage">
-                    <label for="sausage">Sausage</label>
-                    </div>
-
-                    <div>
-                    <input type="checkbox" id="onions" name="topping" value="onions">
-                    <label for="onions">Onions</label>
-                    </div>
-
-                    <div>
-                    <input type="checkbox" id="pepperoni" name="topping" value="pepperoni">
-                    <label for="pepperoni">Pepperoni</label>
-                    </div>
-
-                    <div>
-                    <input type="checkbox" id="mushrooms" name="topping" value="mushrooms">
-                    <label for="mushrooms">Mushrooms</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="newsletter" name="news_letter">
-                    <label for="newsletter">Send me the news letter</label>
-                </div>
-                </div>
-                <button type="submit">Submit</button>
-                <button type="reset">Reset</button>
-
+            <form>
+                <input type="search" name="queryBox" placeholder="Search"/>
+                <input type="submit" value="Go!"/>
             </form>
-            
-        </div>
-        <div>
-            <a href="https://www.theodinproject.com/lessons/node-path-intermediate-html-and-css-form-validation">Form Validation</a>
-
-            <form action="#" method="get">
-                <div>
-                  <label for="user_email">*Email:</label>
-                  <input type="email" id="user_email" name="user_email" required>
-                </div>
-                <br>
-              
-                <div>
-                  <label for="user_password">*Password:</label>
-                  <input type="password" id="user_password" name="user_password" required>
-                </div>
-                <div>
-                    <label for="quantity">Quantity</label>
-                    <input type="number" id="quantity" name="quantity" min="1" value="0">
-                </div>
-                <div>
-                    <label for="passengers">Passengers</label>
-                    <input type="number" id="passengers" name="passengers" max="5" value="0">
-                </div>
-                <div>
-                    <label for="zip_code">Postal / Zip Code:</label>
-                    <input type="text" id="zip_code" name="zip_code" pattern="(\d{5}([\-]\d{4})?)" required>
-                </div>
-                <button type="submit">Login</button>
-              </form>
-        </div>
-        <div>
-            <!--Image-->
-        </div>
+       </nav>
+       <div>
+        <h1>Main</h1>
+       </div>
+        <footer>
+            <!-- contact details, copyright, terms and conditions, site language, accessibility polity, ...-->
+             <p></p>
+        </footer>
+        <script src="scripts/app.js">
+        </script>
     </body>
 </html>
