Body elements and positionining

--- a/index.html
+++ b/index.html
@@ -23,8 +23,16 @@
                 <input type="submit" value="Go!"/>
             </form>
        </nav>
-       <div>
-        <h1>Main</h1>
+       <div id="mainContent">
+            <h1>Main</h1>
+            <div class="mainWrapper">
+            <div class="bodyL">
+                <p>LEFT</p>
+            </div>
+            <div class="bodyR">
+                <p>RIGHT</p>
+            </div>
+            </div>
        </div>
         <footer>
             <!-- contact details, copyright, terms and conditions, site language, accessibility polity, ...-->
